<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title"
    >
    <EditTextPreference
        android:defaultValue="@string/settings_number_of_articles_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_number_of_articles_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_number_of_articles_label" />

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label"/>

    <PreferenceCategory
        android:title="Sections"/>
    <CheckBoxPreference
        android:key="@string/settings_section_politics_key"
        android:title="@string/settings_section_politics_label"
        android:defaultValue="false"/>

    <CheckBoxPreference
        android:key="@string/settings_section_economics_key"
        android:title="@string/settings_section_economics_label"
        android:defaultValue="false"/>

    <CheckBoxPreference
        android:key="@string/settings_section_society_key"
        android:title="@string/settings_section_society_label"
        android:defaultValue="false"/>

    <CheckBoxPreference
        android:key="@string/settings_section_environment_key"
        android:title="@string/settings_section_environment_label"
        android:defaultValue="false"/>

    <CheckBoxPreference
        android:key="@string/settings_section_opinion_key"
        android:title="@string/settings_section_opinion_label"
        android:defaultValue="false"/>

    <CheckBoxPreference
        android:key="@string/settings_section_music_key"
        android:title="@string/settings_section_music_label"
        android:defaultValue="true"/>

    <CheckBoxPreference
        android:key="@string/settings_section_design_key"
        android:title="@string/settings_section_design_label"
        android:defaultValue="false"/>
</PreferenceScreen>